--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>ImanTap</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        html, body {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        overflow: hidden;
+        }
+        
+        #root {
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
+        -webkit-overflow-scrolling: touch;
+        }
         body {
             background-color: #f8fafc;
             color: #1e293b;
