--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         -webkit-overflow-scrolling: touch;
         }
         body {
-            background-color: #f8fafc;
+            background-color: #f1f5f9;
             color: #1e293b;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             -webkit-tap-highlight-color: transparent;
