--- a/index.html
+++ b/index.html
@@ -69,6 +69,30 @@
         button, div {
             transition: all 0.2s ease-in-out;
         }
+
+        /* ✅ XP Animation */
+        @keyframes xpFloat {
+            0% {
+                opacity: 0;
+                transform: translateY(0) scale(0.8);
+            }
+            20% {
+                opacity: 1;
+                transform: translateY(-10px) scale(1.1);
+            }
+            40% {
+                opacity: 1;
+                transform: translateY(-20px) scale(1);
+            }
+            100% {
+                opacity: 0;
+                transform: translateY(-60px) scale(0.9);
+            }
+        }
+
+        .animate-xp-float {
+            animation: xpFloat 2s ease-out forwards;
+        }
     </style>
 <script type="importmap">
 {
